# vscode-debug-book2-docker

./: Dockerfile  pyproject.toml
app/: app.py
