[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Atsushi Morimoto (74th) <site@74th.tech>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
waitress = "^2.0.0"
wheel = "^0.36.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
